fixed navbar overlaying scrollbar

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
     width: 100%;
     height: 100%;
     scrollbar-width: none;
-    overflow-y: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
 }
